# litespeed

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  NEXT_STEPS.md  README.md  SPEC.md  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  checks.yml
artifacts/: README.md
artifacts/distillers/: distiller-default.md
docs/: hackathon-worksplit.md  module-ownership.md  onboarding.md  phase0.md
frontend/: README.md  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: README.md  check_staged.py  import_fixture.py  live_probe.py  nova_feasibility.py
src/nova/: cli.py
src/nova/audit/: __init__.py  log.py
src/nova/campaigns/: __init__.py
src/nova/config/: __init__.py  resolver.py
src/nova/connectors/: __init__.py  protocol.py  registry.py
src/nova/events/: __init__.py  jsonl_replayer.py  models.py  sdk_translator.py  store.py
src/nova/gates/: __init__.py  decisions.py
src/nova/index/: __init__.py  db.py  reindex.py
src/nova/memory/: __init__.py  artifacts.py  notes.py
src/nova/secrets/: __init__.py  redaction.py  resolver.py
src/nova/server/: __init__.py  app.py
src/nova/sessions/: __init__.py  leases.py  runner.py
src/nova/workstreams/: __init__.py  models.py  store.py  worktrees.py
tests/: test_artifacts.py  test_audit.py  test_config.py  test_connector_registry.py  test_db.py  test_gates.py  test_leases.py  test_normalizer.py  test_notes.py  test_reindex.py  test_runner.py  test_sdk_translator.py  test_secrets.py  test_server.py  test_workstream_store.py  test_worktrees.py
tests/fixtures/golden/: README.md  probe_edit_read_tools.jsonl  probe_read_tool.jsonl  sample_session.jsonl
